--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ mpmath==1.3.0
 numpy==2.4.0
 onnxruntime==1.23.2
 packaging==25.0
+pandas==2.3.2
 pillow==12.0.0
 protobuf==6.33.2
 pydantic==2.12.5
